--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="fr">
 <head>
   <meta charset="utf-8">
-  <title>Titre de la page</title>
+  <title>Reservia - Trouvez votre hébergement</title>
   <link rel="stylesheet" href="style.css">
   <script src="script.js"></script>
   <script src="https://kit.fontawesome.com/fccb76fc09.js" crossorigin="anonymous"></script>
@@ -10,37 +10,41 @@
 <body>
 	<div id="bloc_page">
 		<header>
-			<div id="logo">
-				<img src="Projet 2 - Reservia/images/logo/Reservia@3x.png" alt="logo reservia" />
-			</div>
+			<div id="titre_principal">
+				<div id="logo">
+					<img src="Projet 2 - Reservia/images/logo/Reservia@3x.png" alt="logo reservia" />
+				</div>
 				<h1>Trouvez votre hébergement pour des vacances de rêve</h1>
 				<p>En plein centre ville ou en pleine nature</p>
-			
+			</div>
+
 			<nav>
 				<ul>
 					<li><a href="#">Hébergement</a></li>
 					<li><a href="#">Activités</a></li>
 					<li><a href="#">S'inscrire</a></li>
 				</ul>
-			</nav>
-			
-			<form method="post" action="traitement.php">
+			</nav>	
+		</header>
+
+		<form method="post" action="traitement.php">
 				<p>
 					<label for="recherche"><i class="fas fa-map-marker-alt"></i></label>
 					<input type="text" name="Recherche" value="Marseille,France">
+					<button type="button" class="button1">Rechercher</button>
 				</p>
-			</form>
-		</header>
+		</form>
 
 		<div id="filtres">
 			<ul>
-				<li><a href="#">Filtres</a></li>
-				<li><a href="#">Economique</a></li>
-				<li><a href="#">Familial</a></li>
-				<li><a href="#">Romantique</a></li>
-				<li><a href="#">Animaux autorisés</a></li>
+				<li>Filtres</li>
+				<li><a href="#"><i class="fas fa-money-bill-wave"></i>Economique</a></li>
+				<li><a href="#"><i class="fas fa-child"></i>Familial</a></li>
+				<li><a href="#"><i class="fas fa-heart"></i>Romantique</a></li>
+				<li><a href="#"><i class="fas fa-dog"></i>Animaux autorisés</a></li>
 			</ul>
-
+			<p>Plus de 500 logements sont disponibles dans cette ville</p>
+		</div>
 		<section>
 			<div id="hebergement">
 				<h1>Hébgergement à Marseille</h1>
