Le footer est fait

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 				<ul>
 					<li><a href="#">Hébergement</a></li>
 					<li><a href="#">Activités</a></li>
-					<li><a href="#">S'inscrire</a></li>
+					<li><a href="#"><span>S'inscrire</span></a></li>
 				</ul>
 			</nav>	
 		</header>
@@ -43,40 +43,45 @@
 				<li><a href="#"><i class="fas fa-heart"></i>Romantique</a></li>
 				<li><a href="#"><i class="fas fa-dog"></i>Animaux autorisés</a></li>
 			</ul>
-			<p>Plus de 500 logements sont disponibles dans cette ville</p>
+			<p><i class="fas fa-info"></i>Plus de 500 logements sont disponibles dans cette ville</p>
 		</div>
 		<section>
 			<div id="hebergement">
 				<h1>Hébgergement à Marseille</h1>
 				<div class="premiere_img">
-					<p><img src="Projet 2 - Reservia/images/hebergements/4_small/marcus-loke-WQJvWU_HZFo-unsplash.jpg" alt="Auberge la Cannabière" height="100px" width="150px" /><img src="Projet 2 - Reservia/images/hebergements/4_small/fred-kleber-gTbaxaVLvsg-unsplash.jpg" alt="Hôtel du port" height="100px" width="150px" /><img src="Projet 2 - Reservia/images/hebergements/4_small/reisetopia-B8WIgxA_PFU-unsplash.jpg" alt="Hôtel les mouettes" height="100px" width="150px" /></p>
+					<!--<p><img src="Projet 2 - Reservia/images/hebergements/4_small/marcus-loke-WQJvWU_HZFo-unsplash.jpg" alt="Auberge la Cannabière" height="100px" width="150px" /><img src="Projet 2 - Reservia/images/hebergements/4_small/fred-kleber-gTbaxaVLvsg-unsplash.jpg" alt="Hôtel du port" height="100px" width="150px" /><img src="Projet 2 - Reservia/images/hebergements/4_small/reisetopia-B8WIgxA_PFU-unsplash.jpg" alt="Hôtel les mouettes" height="100px" width="150px" /></p>-->
+					<h6>Auberge la Cannabière</h6><h6>Hôtel du port</h6><h6>Hôtel les mouettes</h6>
 				</div>
 				<div class="deuxieme_img">
-					<p><img src="Projet 2 - Reservia/images/hebergements/4_small/annie-spratt-Eg1qcIitAuA-unsplash.jpg" alt="Hôtel de la mer" height="100px" width="150px" /><img src="Projet 2 - Reservia/images/hebergements/4_small/nicate-lee-kT-ZyaiwBe0-unsplash.jpg" alt="Auberge le Panier" height="100px" width="150px" /><img src="Projet 2 - Reservia/images/hebergements/4_small/febrian-zakaria-M6S1WvfW68A-unsplash.jpg" alt="Hôtel chez Amina" height="100px" width="150px" /></p>
+					<!-- <p><img src="Projet 2 - Reservia/images/hebergements/4_small/annie-spratt-Eg1qcIitAuA-unsplash.jpg" alt="Hôtel de la mer" height="100px" width="150px" /><img src="Projet 2 - Reservia/images/hebergements/4_small/nicate-lee-kT-ZyaiwBe0-unsplash.jpg" alt="Auberge le Panier" height="100px" width="150px" /><img src="Projet 2 - Reservia/images/hebergements/4_small/febrian-zakaria-M6S1WvfW68A-unsplash.jpg" alt="Hôtel chez Amina" height="100px" width="150px" /></p>-->
+					<h6>Hôtel de la mer</h6><h6>Auberge le Panier</h6><h6>Hôtel chez Amina</h6>
 				</div>
+				<p><a href="#">Afficher plus</a></p>
 			</div>
 			<aside>
-				<h1>Les plus populaires</h1>
-				<div class="populaires">
-					<p><img src="Projet 2 - Reservia/images/hebergements/4_small/emile-guillemot-Bj_rcSC5XfE-unsplash.jpg" alt="Hôtel le soleil du matin" height="100px" width="150px" /><img src="Projet 2 - Reservia/images/hebergements/4_small/aw-creative-VGs8z60yT2c-unsplash.jpg" alt="Au coeur de l'eau Chambres d'hôtes" height="100px" width="150px" /><img src="Projet 2 - Reservia/images/hebergements/4_small/febrian-zakaria-sjvU0THccQA-unsplash.jpg" alt="Hôtel tout bleu et blanc" height="100px" width="150px" /></p>
+				<div id="populaires">
+					<h1>Les plus populaires</h1>
+					<!--<p><img src="Projet 2 - Reservia/images/hebergements/4_small/emile-guillemot-Bj_rcSC5XfE-unsplash.jpg" alt="Hôtel le soleil du matin" height="100px" width="150px" /><img src="Projet 2 - Reservia/images/hebergements/4_small/aw-creative-VGs8z60yT2c-unsplash.jpg" alt="Au coeur de l'eau Chambres d'hôtes" height="100px" width="150px" /><img src="Projet 2 - Reservia/images/hebergements/4_small/febrian-zakaria-sjvU0THccQA-unsplash.jpg" alt="Hôtel tout bleu et blanc" height="100px" width="150px" /></p>-->
+					<h6>Hôtel le soleil du matin</h6><h6>Au coeur de l'eau Chambres d'hôtes</h6><h6>Hôtel tout bleu et blanc</h6>
 				</div>
 			</aside>
+		</section>
+			<h1>Activités à Marseille</h1>
 			<div id="activites">
-				<h1>Activités à Marseille</h1>
 				<p><img src="Projet 2 - Reservia/images/activites/2_large/reno-laithienne-QUgJhdY5Fyk-unsplash.jpg" alt="Hôtel le soleil du matin" height="220px" width="160px" />
 				<div class="double">
 					<img src="Projet 2 - Reservia/images/activites/2_large/reno-laithienne-QUgJhdY5Fyk-unsplash.jpg" alt="Hôtel le soleil du matin" height="120px" width="160px" />
-					<img src="Projet 2 - Reservia/images/activites/2_large/reno-laithienne-QUgJhdY5Fyk-unsplash.jpg" alt="Hôtel le soleil du matin" height="120px" width="160px" />
+					<img src="Projet 2 - Reservia/images/activites/2_large/reno-laithienne-QUgJhdY5Fyk-unsplash.jpg" alt="Hôtel le soleil du matin" height="120px" width="160px" /></p>
 				</div>
 				<img src="Projet 2 - Reservia/images/activites/2_large/reno-laithienne-QUgJhdY5Fyk-unsplash.jpg" alt="Hôtel le soleil du matin" height="220px" width="160px" />
 				<div class="double">
 					<img src="Projet 2 - Reservia/images/activites/2_large/reno-laithienne-QUgJhdY5Fyk-unsplash.jpg" alt="Hôtel le soleil du matin" height="120px" width="160px" />
 					<img src="Projet 2 - Reservia/images/activites/2_large/reno-laithienne-QUgJhdY5Fyk-unsplash.jpg" alt="Hôtel le soleil du matin" height="120px" width="160px" />
 				</div>
-		</section>
-	</div>
-	<footer>
-		<div id="bloc_page">
+			</div>
+	
+		<footer>
+		
 			<div id="a_propos">
 	            <h1>A propos</h1>
 	            <p><a href="#">Fonctionnement du site !</a></p>
@@ -93,8 +98,9 @@
 	            <p><a href="#">Centre d'aide</a></p>
 	            <p><a href="#">Nous contacter</a></p>    
 	        </div>
-	    </div>
-	</footer>
+	    
+		</footer>
+	</div>
   <!-- Le reste du contenu -->
 
 </body>
