--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <link rel="stylesheet" href="style.css">
   <script src="script.js"></script>
   <script src="https://kit.fontawesome.com/fccb76fc09.js" crossorigin="anonymous"></script>
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
 </head>
 <body>
 	<div id="bloc_page">
@@ -28,7 +29,7 @@
 		</header>
 
 		<form method="post" action="traitement.php">
-				<p>
+				<div class="formulaire">
 					<label for="recherche"><i class="fas fa-map-marker-alt"></i></label>
 					<input type="text" name="Recherche" value="Marseille,France">
 					<button type="button" class="button1">Rechercher</button>
@@ -36,52 +37,55 @@
 		</form>
 
 		<div id="filtres">
+			<span>Filtres</span>
 			<ul>
-				<li>Filtres</li>
 				<li><a href="#"><i class="fas fa-money-bill-wave"></i>Economique</a></li>
 				<li><a href="#"><i class="fas fa-child"></i>Familial</a></li>
 				<li><a href="#"><i class="fas fa-heart"></i>Romantique</a></li>
 				<li><a href="#"><i class="fas fa-dog"></i>Animaux autorisés</a></li>
 			</ul>
-			<p><i class="fas fa-info"></i>Plus de 500 logements sont disponibles dans cette ville</p>
 		</div>
-		<section>
+		<p><i class="fas fa-info"></i>Plus de 500 logements sont disponibles dans cette ville</p>
+		<section id="section_1">
 			<div id="hebergement">
 				<h1>Hébgergement à Marseille</h1>
 				<div class="premiere_img">
-					<!--<p><img src="Projet 2 - Reservia/images/hebergements/4_small/marcus-loke-WQJvWU_HZFo-unsplash.jpg" alt="Auberge la Cannabière" height="100px" width="150px" /><img src="Projet 2 - Reservia/images/hebergements/4_small/fred-kleber-gTbaxaVLvsg-unsplash.jpg" alt="Hôtel du port" height="100px" width="150px" /><img src="Projet 2 - Reservia/images/hebergements/4_small/reisetopia-B8WIgxA_PFU-unsplash.jpg" alt="Hôtel les mouettes" height="100px" width="150px" /></p>-->
-					<h6>Auberge la Cannabière</h6><h6>Hôtel du port</h6><h6>Hôtel les mouettes</h6>
+					<p><img src="Projet 2 - Reservia/images/hebergements/4_small/marcus-loke-WQJvWU_HZFo-unsplash.jpg" alt="Auberge la Cannabière" /></p><p><img src="Projet 2 - Reservia/images/hebergements/4_small/fred-kleber-gTbaxaVLvsg-unsplash.jpg" alt="Hôtel du port" /></p><p><img src="Projet 2 - Reservia/images/hebergements/4_small/reisetopia-B8WIgxA_PFU-unsplash.jpg" alt="Hôtel les mouettes" /></p>
 				</div>
 				<div class="deuxieme_img">
-					<!-- <p><img src="Projet 2 - Reservia/images/hebergements/4_small/annie-spratt-Eg1qcIitAuA-unsplash.jpg" alt="Hôtel de la mer" height="100px" width="150px" /><img src="Projet 2 - Reservia/images/hebergements/4_small/nicate-lee-kT-ZyaiwBe0-unsplash.jpg" alt="Auberge le Panier" height="100px" width="150px" /><img src="Projet 2 - Reservia/images/hebergements/4_small/febrian-zakaria-M6S1WvfW68A-unsplash.jpg" alt="Hôtel chez Amina" height="100px" width="150px" /></p>-->
-					<h6>Hôtel de la mer</h6><h6>Auberge le Panier</h6><h6>Hôtel chez Amina</h6>
+					<p><img src="Projet 2 - Reservia/images/hebergements/4_small/annie-spratt-Eg1qcIitAuA-unsplash.jpg" alt="Hôtel de la mer" /></p><p><img src="Projet 2 - Reservia/images/hebergements/4_small/nicate-lee-kT-ZyaiwBe0-unsplash.jpg" alt="Auberge le Panier" /></p><p><img src="Projet 2 - Reservia/images/hebergements/4_small/febrian-zakaria-M6S1WvfW68A-unsplash.jpg" alt="Hôtel chez Amina" /></p>
 				</div>
 				<p><a href="#">Afficher plus</a></p>
 			</div>
 			<aside>
 				<div id="populaires">
 					<h1>Les plus populaires</h1>
-					<!--<p><img src="Projet 2 - Reservia/images/hebergements/4_small/emile-guillemot-Bj_rcSC5XfE-unsplash.jpg" alt="Hôtel le soleil du matin" height="100px" width="150px" /><img src="Projet 2 - Reservia/images/hebergements/4_small/aw-creative-VGs8z60yT2c-unsplash.jpg" alt="Au coeur de l'eau Chambres d'hôtes" height="100px" width="150px" /><img src="Projet 2 - Reservia/images/hebergements/4_small/febrian-zakaria-sjvU0THccQA-unsplash.jpg" alt="Hôtel tout bleu et blanc" height="100px" width="150px" /></p>-->
-					<h6>Hôtel le soleil du matin</h6><h6>Au coeur de l'eau Chambres d'hôtes</h6><h6>Hôtel tout bleu et blanc</h6>
+					<p><img src="Projet 2 - Reservia/images/hebergements/4_small/emile-guillemot-Bj_rcSC5XfE-unsplash.jpg" alt="Hôtel le soleil du matin" height="100px" width="150px" /></p><p><img src="Projet 2 - Reservia/images/hebergements/4_small/aw-creative-VGs8z60yT2c-unsplash.jpg" alt="Au coeur de l'eau Chambres d'hôtes" height="100px" width="150px" /></p><p><img src="Projet 2 - Reservia/images/hebergements/4_small/febrian-zakaria-sjvU0THccQA-unsplash.jpg" alt="Hôtel tout bleu et blanc" height="100px" width="150px" /></p>
 				</div>
 			</aside>
 		</section>
+		<section id="section_2">
 			<h1>Activités à Marseille</h1>
 			<div id="activites">
-				<p><img src="Projet 2 - Reservia/images/activites/2_large/reno-laithienne-QUgJhdY5Fyk-unsplash.jpg" alt="Hôtel le soleil du matin" height="220px" width="160px" />
-				<div class="double">
-					<img src="Projet 2 - Reservia/images/activites/2_large/reno-laithienne-QUgJhdY5Fyk-unsplash.jpg" alt="Hôtel le soleil du matin" height="120px" width="160px" />
-					<img src="Projet 2 - Reservia/images/activites/2_large/reno-laithienne-QUgJhdY5Fyk-unsplash.jpg" alt="Hôtel le soleil du matin" height="120px" width="160px" /></p>
+				<div class="vertical">
+					<p><img src="Projet 2 - Reservia/images/activites/2_large/reno-laithienne-QUgJhdY5Fyk-unsplash.jpg" alt="Hôtel le soleil du matin" /></p>
 				</div>
-				<img src="Projet 2 - Reservia/images/activites/2_large/reno-laithienne-QUgJhdY5Fyk-unsplash.jpg" alt="Hôtel le soleil du matin" height="220px" width="160px" />
 				<div class="double">
-					<img src="Projet 2 - Reservia/images/activites/2_large/reno-laithienne-QUgJhdY5Fyk-unsplash.jpg" alt="Hôtel le soleil du matin" height="120px" width="160px" />
-					<img src="Projet 2 - Reservia/images/activites/2_large/reno-laithienne-QUgJhdY5Fyk-unsplash.jpg" alt="Hôtel le soleil du matin" height="120px" width="160px" />
+					<p><img src="Projet 2 - Reservia/images/activites/2_large/paul-hermann-QFTrLdQIRhI-unsplash.jpg" alt="Hôtel le soleil du matin" /></p>
+					<p><img src="Projet 2 - Reservia/images/activites/2_large/kevin-hikari-rV_Qd1l-VXg-unsplash.jpg" alt="Hôtel le soleil du matin" /></p>
+				</div>
+
+				<div class="vertical">
+					<p><img src="Projet 2 - Reservia/images/activites/2_large/kilyan-sockalingum-NR8-cBCN3aI-unsplash.jpg" alt="Hôtel le soleil du matin" /></p>
+				</div>
+				<div class="double">
+					<p><img src="Projet 2 - Reservia/images/activites/2_large/florian-wehde-xW9e8gdotxI-unsplash.jpg" alt="Hôtel le soleil du matin" /></p>
+					<p><img src="Projet 2 - Reservia/images/activites/2_large/lena-paulin-wH2-EJoDcV0-unsplash.jpg" alt="Hôtel le soleil du matin" /></p>
 				</div>
 			</div>
-	
+		</section>
+	</div>
 		<footer>
-		
 			<div id="a_propos">
 	            <h1>A propos</h1>
 	            <p><a href="#">Fonctionnement du site !</a></p>
@@ -97,11 +101,7 @@
 	            <h1>Assistance</h1>
 	            <p><a href="#">Centre d'aide</a></p>
 	            <p><a href="#">Nous contacter</a></p>    
-	        </div>
-	    
+	        </div>	    
 		</footer>
-	</div>
-  <!-- Le reste du contenu -->
-
 </body>
 </html>
