--- a/index.html
+++ b/index.html
@@ -50,17 +50,68 @@
 			<div id="hebergement">
 				<h1>Hébgergement à Marseille</h1>
 				<div class="premiere_img">
-					<p><img src="Projet 2 - Reservia/images/hebergements/4_small/marcus-loke-WQJvWU_HZFo-unsplash.jpg" alt="Auberge la Cannabière" /></p><p><img src="Projet 2 - Reservia/images/hebergements/4_small/fred-kleber-gTbaxaVLvsg-unsplash.jpg" alt="Hôtel du port" /></p><p><img src="Projet 2 - Reservia/images/hebergements/4_small/reisetopia-B8WIgxA_PFU-unsplash.jpg" alt="Hôtel les mouettes" /></p>
+					<div class="first">
+						<img src="Projet 2 - Reservia/images/hebergements/4_small/marcus-loke-WQJvWU_HZFo-unsplash.jpg" alt="Auberge la Cannabière" />
+						<span>Auberge la Cannabière</span>
+						<p>Nuit à partir de 25€</p>
+						<p><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="far fa-star"></i></p>
+					</div>
+					<div class="first">
+						<img src="Projet 2 - Reservia/images/hebergements/4_small/fred-kleber-gTbaxaVLvsg-unsplash.jpg" alt="Hôtel du port" />
+						<span>Hôtel du port</span>
+						<p>Nuit à partir de 52€</p>
+						<p><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i></p>
+					</div>
+					<div class="first">
+						<img src="Projet 2 - Reservia/images/hebergements/4_small/reisetopia-B8WIgxA_PFU-unsplash.jpg" alt="Hôtel les mouettes" />
+						<span>Hôtel les mouettes</span>
+						<p>Nuit à partir de 76€</p>
+						<p><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="far fa-star"></i></p>
+					</div>
 				</div>
 				<div class="deuxieme_img">
-					<p><img src="Projet 2 - Reservia/images/hebergements/4_small/annie-spratt-Eg1qcIitAuA-unsplash.jpg" alt="Hôtel de la mer" /></p><p><img src="Projet 2 - Reservia/images/hebergements/4_small/nicate-lee-kT-ZyaiwBe0-unsplash.jpg" alt="Auberge le Panier" /></p><p><img src="Projet 2 - Reservia/images/hebergements/4_small/febrian-zakaria-M6S1WvfW68A-unsplash.jpg" alt="Hôtel chez Amina" /></p>
+					<div class="first">
+						<img src="Projet 2 - Reservia/images/hebergements/4_small/annie-spratt-Eg1qcIitAuA-unsplash.jpg" alt="Hôtel de la mer" />
+						<span>Hôtel de la mer</span>
+						<p>Nuit à partir de 46€</p>
+						<p><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="far fa-star"></i><i class="far fa-star"></i></p>
+					</div>
+					<div class="first">
+						<img src="Projet 2 - Reservia/images/hebergements/4_small/nicate-lee-kT-ZyaiwBe0-unsplash.jpg" alt="Auberge le Panier" />
+						<span>Auberge le panier</span>
+						<p>Nuit à partir de 23€</p>
+						<p><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="far fa-star"></i></p>
+					</div>
+					<div class="first">
+						<img src="Projet 2 - Reservia/images/hebergements/4_small/febrian-zakaria-M6S1WvfW68A-unsplash.jpg" alt="Hôtel chez Amina" />
+						<span>Hôtel chez Amina</span>
+						<p>Nuit à partir de 96€</p>
+						<p><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i></p>
+					</div>
 				</div>
 				<p><a href="#">Afficher plus</a></p>
 			</div>
 			<aside>
 				<div id="populaires">
-					<h1>Les plus populaires</h1>
-					<p><img src="Projet 2 - Reservia/images/hebergements/4_small/emile-guillemot-Bj_rcSC5XfE-unsplash.jpg" alt="Hôtel le soleil du matin" height="100px" width="150px" /></p><p><img src="Projet 2 - Reservia/images/hebergements/4_small/aw-creative-VGs8z60yT2c-unsplash.jpg" alt="Au coeur de l'eau Chambres d'hôtes" height="100px" width="150px" /></p><p><img src="Projet 2 - Reservia/images/hebergements/4_small/febrian-zakaria-sjvU0THccQA-unsplash.jpg" alt="Hôtel tout bleu et blanc" height="100px" width="150px" /></p>
+					<h1>Les plus populaires<a href="#"><i class="fas fa-chart-line"></i></a></h1>
+					<div class="second">
+						<img src="Projet 2 - Reservia/images/hebergements/4_small/emile-guillemot-Bj_rcSC5XfE-unsplash.jpg" alt="Hôtel le soleil du matin"  />
+						<span>Hôtel le soleil du matin</span>
+						<p>Nuit à partir de 128€</p>
+						<p><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i></p>
+					</div>
+					<div class="second">
+						<img src="Projet 2 - Reservia/images/hebergements/4_small/aw-creative-VGs8z60yT2c-unsplash.jpg" alt="Au coeur de l'eau Chambres d'hôtes" />
+						<span>Hôtel le soleil du matin</span>
+						<p>Nuit à partir de 128€</p>
+						<p><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i></p>
+					</div>
+					<div class="second">
+						<img src="Projet 2 - Reservia/images/hebergements/4_small/febrian-zakaria-sjvU0THccQA-unsplash.jpg" alt="Hôtel tout bleu et blanc" />
+						<span>Hôtel le soleil du matin</span>
+						<p>Nuit à partir de 128€</p>
+						<p><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i></p>
+					</div>
 				</div>
 			</aside>
 		</section>
@@ -68,40 +119,58 @@
 			<h1>Activités à Marseille</h1>
 			<div id="activites">
 				<div class="vertical">
-					<p><img src="Projet 2 - Reservia/images/activites/2_large/reno-laithienne-QUgJhdY5Fyk-unsplash.jpg" alt="Hôtel le soleil du matin" /></p>
+					<div class="titre_2">
+						<img src="Projet 2 - Reservia/images/activites/2_large/reno-laithienne-QUgJhdY5Fyk-unsplash.jpg" alt="Hôtel le soleil du matin" />
+						<span>Vieux Port</span>
+					</div>
 				</div>
 				<div class="double">
-					<p><img src="Projet 2 - Reservia/images/activites/2_large/paul-hermann-QFTrLdQIRhI-unsplash.jpg" alt="Hôtel le soleil du matin" /></p>
-					<p><img src="Projet 2 - Reservia/images/activites/2_large/kevin-hikari-rV_Qd1l-VXg-unsplash.jpg" alt="Hôtel le soleil du matin" /></p>
+					<div class="titre_2">
+						<img src="Projet 2 - Reservia/images/activites/2_large/paul-hermann-QFTrLdQIRhI-unsplash.jpg" alt="Hôtel le soleil du matin" />
+						<span>Fort de Pomègues</span>
+					</div>
+					<div class="titre_2">
+						<img src="Projet 2 - Reservia/images/activites/2_large/kevin-hikari-rV_Qd1l-VXg-unsplash.jpg" alt="Hôtel le soleil du matin" />
+						<span>Îles du Frioul</span>
+					</div>
 				</div>
 
 				<div class="vertical">
-					<p><img src="Projet 2 - Reservia/images/activites/2_large/kilyan-sockalingum-NR8-cBCN3aI-unsplash.jpg" alt="Hôtel le soleil du matin" /></p>
+					<div class="titre_2">
+						<img src="Projet 2 - Reservia/images/activites/2_large/kilyan-sockalingum-NR8-cBCN3aI-unsplash.jpg" alt="Hôtel le soleil du matin" />
+						<span>Parc National des Calanques</span>
+					</div>
 				</div>
 				<div class="double">
-					<p><img src="Projet 2 - Reservia/images/activites/2_large/florian-wehde-xW9e8gdotxI-unsplash.jpg" alt="Hôtel le soleil du matin" /></p>
-					<p><img src="Projet 2 - Reservia/images/activites/2_large/lena-paulin-wH2-EJoDcV0-unsplash.jpg" alt="Hôtel le soleil du matin" /></p>
+					<div class="titre_2">
+						<img src="Projet 2 - Reservia/images/activites/2_large/florian-wehde-xW9e8gdotxI-unsplash.jpg" alt="Hôtel le soleil du matin" />
+						<span>Nôtre-Dame-De-La-Garde</span>
+					</div>
+					<div class="titre_2">
+						<img src="Projet 2 - Reservia/images/activites/2_large/lena-paulin-wH2-EJoDcV0-unsplash.jpg" alt="Hôtel le soleil du matin" />
+						<span>Parc Longchamp</span>
+					</div>
 				</div>
 			</div>
 		</section>
 	</div>
-		<footer>
-			<div id="a_propos">
-	            <h1>A propos</h1>
-	            <p><a href="#">Fonctionnement du site !</a></p>
-	            <p><a href="#">Conditions générales de vente</a></p>
-	            <p><a href="#">Données et confidentialité</a></p>    
-	        </div>
-	        <div id="a_propos">
-	            <h1>Nos hébergements</h1>
-	            <p><a href="#">Charte qualité</a></p>
-	            <p><a href="#">Soumettre votre hôtel</a></p>  
-	        </div>
-	        <div id="a_propos">
-	            <h1>Assistance</h1>
-	            <p><a href="#">Centre d'aide</a></p>
-	            <p><a href="#">Nous contacter</a></p>    
-	        </div>	    
-		</footer>
+	<footer>
+		<div id="a_propos">
+	           <h1>A propos</h1>
+	           <p><a href="#">Fonctionnement du site !</a></p>
+	           <p><a href="#">Conditions générales de vente</a></p>
+	           <p><a href="#">Données et confidentialité</a></p>    
+	       </div>
+	       <div id="a_propos">
+	           <h1>Nos hébergements</h1>
+	           <p><a href="#">Charte qualité</a></p>
+	           <p><a href="#">Soumettre votre hôtel</a></p>  
+	       </div>
+	       <div id="a_propos">
+	           <h1>Assistance</h1>
+	           <p><a href="#">Centre d'aide</a></p>
+	           <p><a href="#">Nous contacter</a></p>    
+	       </div>	    
+	</footer>
 </body>
 </html>
