--- a/index.html
+++ b/index.html
@@ -11,28 +11,26 @@
 <body>
 	<div id="bloc_page">
 		<header>
-			<div id="titre_principal">
-				<div id="logo">
+			<div id="logo">
 					<img src="Projet 2 - Reservia/images/logo/Reservia@3x.png" alt="logo reservia" />
-				</div>
-				<h1>Trouvez votre hébergement pour des vacances de rêve</h1>
-				<p>En plein centre ville ou en pleine nature</p>
 			</div>
-
 			<nav>
 				<ul>
-					<li><a href="#">Hébergement</a></li>
-					<li><a href="#">Activités</a></li>
-					<li><a href="#"><span>S'inscrire</span></a></li>
+					<li><a href="#section_1">Hébergement</a></li>
+					<li><a href="#section_2">Activités</a></li>
 				</ul>
-			</nav>	
+			</nav>
+			<a href="#"><span>S'inscrire</span></a>	
 		</header>
-
+		<div id="titre_principal">
+				<h1>Trouvez votre hébergement pour des vacances de rêve</h1>
+				<p>En plein centre ville ou en pleine nature</p>
+		</div>
 		<form method="post" action="traitement.php">
 				<div class="formulaire">
 					<label for="recherche"><i class="fas fa-map-marker-alt"></i></label>
 					<input type="text" name="Recherche" value="Marseille,France">
-					<button type="button" class="button1">Rechercher</button>
+					<button type="button" class="button1"><i class="fas fa-search"></i><span>Rechercher</span></button>
 				</p>
 		</form>
 
@@ -49,109 +47,125 @@
 		<section id="section_1">
 			<div id="hebergement">
 				<h1>Hébgergement à Marseille</h1>
-				<div class="premiere_img">
-					<div class="first">
-						<img src="Projet 2 - Reservia/images/hebergements/4_small/marcus-loke-WQJvWU_HZFo-unsplash.jpg" alt="Auberge la Cannabière" />
-						<span>Auberge la Cannabière</span>
-						<p>Nuit à partir de 25€</p>
-						<p><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="far fa-star"></i></p>
+				<a href="#">
+					<div class="premiere_img">
+						<div class="first">
+							<img src="Projet 2 - Reservia/images/hebergements/4_small/marcus-loke-WQJvWU_HZFo-unsplash.jpg" alt="Auberge la Cannabière" />
+							<span>Auberge la Cannabière</span>
+							<p>Nuit à partir de 25€</p>
+							<p><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="far fa-star"></i></p>
+						</div>
+						<div class="first">
+							<img src="Projet 2 - Reservia/images/hebergements/4_small/fred-kleber-gTbaxaVLvsg-unsplash.jpg" alt="Hôtel du port" />
+							<span>Hôtel du port</span>
+							<p>Nuit à partir de 52€</p>
+							<p><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i></p>
+						</div>
+						<div class="first">
+							<img src="Projet 2 - Reservia/images/hebergements/4_small/reisetopia-B8WIgxA_PFU-unsplash.jpg" alt="Hôtel les mouettes" />
+							<span>Hôtel les mouettes</span>
+							<p>Nuit à partir de 76€</p>
+							<p><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="far fa-star"></i></p>
+						</div>
 					</div>
-					<div class="first">
-						<img src="Projet 2 - Reservia/images/hebergements/4_small/fred-kleber-gTbaxaVLvsg-unsplash.jpg" alt="Hôtel du port" />
-						<span>Hôtel du port</span>
-						<p>Nuit à partir de 52€</p>
-						<p><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i></p>
+					<div class="deuxieme_img">
+						<div class="first">
+							<img src="Projet 2 - Reservia/images/hebergements/4_small/annie-spratt-Eg1qcIitAuA-unsplash.jpg" alt="Hôtel de la mer" />
+							<span>Hôtel de la mer</span>
+							<p>Nuit à partir de 46€</p>
+							<p><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="far fa-star"></i><i class="far fa-star"></i></p>
+						</div>
+						<div class="first">
+							<img src="Projet 2 - Reservia/images/hebergements/4_small/nicate-lee-kT-ZyaiwBe0-unsplash.jpg" alt="Auberge le Panier" />
+							<span>Auberge le panier</span>
+							<p>Nuit à partir de 23€</p>
+							<p><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="far fa-star"></i></p>
+						</div>
+						<div class="first">
+							<img src="Projet 2 - Reservia/images/hebergements/4_small/febrian-zakaria-M6S1WvfW68A-unsplash.jpg" alt="Hôtel chez Amina" />
+							<span>Hôtel chez Amina</span>
+							<p>Nuit à partir de 96€</p>
+							<p><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i></p>
+						</div>
 					</div>
-					<div class="first">
-						<img src="Projet 2 - Reservia/images/hebergements/4_small/reisetopia-B8WIgxA_PFU-unsplash.jpg" alt="Hôtel les mouettes" />
-						<span>Hôtel les mouettes</span>
-						<p>Nuit à partir de 76€</p>
-						<p><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="far fa-star"></i></p>
-					</div>
-				</div>
-				<div class="deuxieme_img">
-					<div class="first">
-						<img src="Projet 2 - Reservia/images/hebergements/4_small/annie-spratt-Eg1qcIitAuA-unsplash.jpg" alt="Hôtel de la mer" />
-						<span>Hôtel de la mer</span>
-						<p>Nuit à partir de 46€</p>
-						<p><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="far fa-star"></i><i class="far fa-star"></i></p>
-					</div>
-					<div class="first">
-						<img src="Projet 2 - Reservia/images/hebergements/4_small/nicate-lee-kT-ZyaiwBe0-unsplash.jpg" alt="Auberge le Panier" />
-						<span>Auberge le panier</span>
-						<p>Nuit à partir de 23€</p>
-						<p><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="far fa-star"></i></p>
-					</div>
-					<div class="first">
-						<img src="Projet 2 - Reservia/images/hebergements/4_small/febrian-zakaria-M6S1WvfW68A-unsplash.jpg" alt="Hôtel chez Amina" />
-						<span>Hôtel chez Amina</span>
-						<p>Nuit à partir de 96€</p>
-						<p><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i></p>
-					</div>
-				</div>
+				</a>
 				<p><a href="#">Afficher plus</a></p>
 			</div>
 			<aside>
 				<div id="populaires">
 					<h1>Les plus populaires<a href="#"><i class="fas fa-chart-line"></i></a></h1>
-					<div class="second">
-						<img src="Projet 2 - Reservia/images/hebergements/4_small/emile-guillemot-Bj_rcSC5XfE-unsplash.jpg" alt="Hôtel le soleil du matin"  />
-						<span>Hôtel le soleil du matin</span>
-						<p>Nuit à partir de 128€</p>
-						<p><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i></p>
-					</div>
-					<div class="second">
-						<img src="Projet 2 - Reservia/images/hebergements/4_small/aw-creative-VGs8z60yT2c-unsplash.jpg" alt="Au coeur de l'eau Chambres d'hôtes" />
-						<span>Hôtel le soleil du matin</span>
-						<p>Nuit à partir de 128€</p>
-						<p><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i></p>
-					</div>
-					<div class="second">
-						<img src="Projet 2 - Reservia/images/hebergements/4_small/febrian-zakaria-sjvU0THccQA-unsplash.jpg" alt="Hôtel tout bleu et blanc" />
-						<span>Hôtel le soleil du matin</span>
-						<p>Nuit à partir de 128€</p>
-						<p><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i></p>
-					</div>
+					<a href="#">
+						<div class="second">
+							<img src="Projet 2 - Reservia/images/hebergements/4_small/emile-guillemot-Bj_rcSC5XfE-unsplash.jpg" alt="Hôtel le soleil du matin"  />
+							<div class="soleil">
+								<span>Hôtel le soleil du matin</span>
+								<p>Nuit à partir de 128€</p>
+								<p><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i></p>
+							</div>
+						</div>
+					</a>
+					<a href="#">
+						<div class="second">
+							<img src="Projet 2 - Reservia/images/hebergements/4_small/aw-creative-VGs8z60yT2c-unsplash.jpg" alt="Au coeur de l'eau Chambres d'hôtes" />
+							<div class="soleil">
+								<span>Au coeur de l'eau</br>Chambres d'hôtes</span>
+								<p>Nuit à partir de 71€</p>
+								<p><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="far fa-star"></i></p>
+							</div>
+						</div>
+					</a>
+					<a href="#">
+						<div class="second">
+							<img src="Projet 2 - Reservia/images/hebergements/4_small/febrian-zakaria-sjvU0THccQA-unsplash.jpg" alt="Hôtel tout bleu et blanc" />
+							<div class="soleil">
+								<span>Hôtel tout bleu et blanc</span>
+								<p>Nuit à partir de 68€</p>
+								<p><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="far fa-star"></i></p>
+							</div>
+						</div>
+					</a>	
 				</div>
 			</aside>
 		</section>
 		<section id="section_2">
 			<h1>Activités à Marseille</h1>
-			<div id="activites">
-				<div class="vertical">
-					<div class="titre_2">
-						<img src="Projet 2 - Reservia/images/activites/2_large/reno-laithienne-QUgJhdY5Fyk-unsplash.jpg" alt="Hôtel le soleil du matin" />
-						<span>Vieux Port</span>
+			<a href="#">
+				<div id="activites">
+					<div class="vertical">
+						<div class="titre_2">
+							<img src="Projet 2 - Reservia/images/activites/2_large/reno-laithienne-QUgJhdY5Fyk-unsplash.jpg" alt="Hôtel le soleil du matin" />
+							<span>Vieux Port</span>
+						</div>
 					</div>
-				</div>
-				<div class="double">
-					<div class="titre_2">
-						<img src="Projet 2 - Reservia/images/activites/2_large/paul-hermann-QFTrLdQIRhI-unsplash.jpg" alt="Hôtel le soleil du matin" />
-						<span>Fort de Pomègues</span>
+					<div class="double">
+						<div class="titre_2">
+							<img src="Projet 2 - Reservia/images/activites/2_large/paul-hermann-QFTrLdQIRhI-unsplash.jpg" alt="Hôtel le soleil du matin" />
+							<span>Fort de Pomègues</span>
+						</div>
+						<div class="titre_2">
+							<img src="Projet 2 - Reservia/images/activites/2_large/kevin-hikari-rV_Qd1l-VXg-unsplash.jpg" alt="Hôtel le soleil du matin" />
+							<span>Îles du Frioul</span>
+						</div>
 					</div>
-					<div class="titre_2">
-						<img src="Projet 2 - Reservia/images/activites/2_large/kevin-hikari-rV_Qd1l-VXg-unsplash.jpg" alt="Hôtel le soleil du matin" />
-						<span>Îles du Frioul</span>
-					</div>
-				</div>
 
-				<div class="vertical">
-					<div class="titre_2">
-						<img src="Projet 2 - Reservia/images/activites/2_large/kilyan-sockalingum-NR8-cBCN3aI-unsplash.jpg" alt="Hôtel le soleil du matin" />
-						<span>Parc National des Calanques</span>
+					<div class="vertical">
+						<div class="titre_2">
+							<img src="Projet 2 - Reservia/images/activites/2_large/kilyan-sockalingum-NR8-cBCN3aI-unsplash.jpg" alt="Hôtel le soleil du matin" />
+							<span>Parc National des Calanques</span>
+						</div>
+					</div>
+					<div class="double">
+						<div class="titre_2">
+							<img src="Projet 2 - Reservia/images/activites/2_large/florian-wehde-xW9e8gdotxI-unsplash.jpg" alt="Hôtel le soleil du matin" />
+							<span>Nôtre-Dame-De-La-Garde</span>
+						</div>
+						<div class="titre_2">
+							<img src="Projet 2 - Reservia/images/activites/2_large/lena-paulin-wH2-EJoDcV0-unsplash.jpg" alt="Hôtel le soleil du matin" />
+							<span>Parc Longchamp</span>
+						</div>
 					</div>
 				</div>
-				<div class="double">
-					<div class="titre_2">
-						<img src="Projet 2 - Reservia/images/activites/2_large/florian-wehde-xW9e8gdotxI-unsplash.jpg" alt="Hôtel le soleil du matin" />
-						<span>Nôtre-Dame-De-La-Garde</span>
-					</div>
-					<div class="titre_2">
-						<img src="Projet 2 - Reservia/images/activites/2_large/lena-paulin-wH2-EJoDcV0-unsplash.jpg" alt="Hôtel le soleil du matin" />
-						<span>Parc Longchamp</span>
-					</div>
-				</div>
-			</div>
+			</a>	
 		</section>
 	</div>
 	<footer>
