--- a/index.html
+++ b/index.html
@@ -4,7 +4,6 @@
   <meta charset="utf-8">
   <title>Reservia - Trouvez votre hébergement</title>
   <link rel="stylesheet" href="style.css">
-  <script src="script.js"></script>
   <script src="https://kit.fontawesome.com/fccb76fc09.js" crossorigin="anonymous"></script>
   <meta name="viewport" content="width=device-width, initial-scale=1" />
 </head>
@@ -23,15 +22,15 @@
 			<a href="#"><span>S'inscrire</span></a>	
 		</header>
 		<div id="titre_principal">
-				<h1>Trouvez votre hébergement pour des vacances de rêve</h1>
-				<p>En plein centre ville ou en pleine nature</p>
+			<h1>Trouvez votre hébergement pour des vacances de rêve</h1>
+			<p>En plein centre ville ou en pleine nature</p>
 		</div>
 		<form method="post" action="traitement.php">
 				<div class="formulaire">
 					<label for="recherche"><i class="fas fa-map-marker-alt"></i></label>
 					<input type="text" name="Recherche" value="Marseille,France">
 					<button type="button" class="button1"><i class="fas fa-search"></i><span>Rechercher</span></button>
-				</p>
+				</div>
 		</form>
 
 		<div id="filtres">
@@ -46,7 +45,7 @@
 		<p><i class="fas fa-info"></i>Plus de 500 logements sont disponibles dans cette ville</p>
 		<section id="section_1">
 			<div id="hebergement">
-				<h1>Hébgergement à Marseille</h1>
+				<h3>Hébgergement à Marseille</h3>
 				<a href="#">
 					<div class="premiere_img">
 						<div class="first">
@@ -93,7 +92,7 @@
 			</div>
 			<aside>
 				<div id="populaires">
-					<h1>Les plus populaires<a href="#"><i class="fas fa-chart-line"></i></a></h1>
+					<h3>Les plus populaires<a href="#"><i class="fas fa-chart-line"></i></a></h3>
 					<a href="#">
 						<div class="second">
 							<img src="Projet 2 - Reservia/images/hebergements/4_small/emile-guillemot-Bj_rcSC5XfE-unsplash.jpg" alt="Hôtel le soleil du matin"  />
@@ -128,7 +127,7 @@
 			</aside>
 		</section>
 		<section id="section_2">
-			<h1>Activités à Marseille</h1>
+			<h3>Activités à Marseille</h3>
 			<a href="#">
 				<div id="activites">
 					<div class="vertical">
@@ -167,24 +166,24 @@
 				</div>
 			</a>	
 		</section>
-	</div>
 	<footer>
-		<div id="a_propos">
-	           <h1>A propos</h1>
+		<div class="a_propos">
+	           <h3>A propos</h3>
 	           <p><a href="#">Fonctionnement du site !</a></p>
 	           <p><a href="#">Conditions générales de vente</a></p>
 	           <p><a href="#">Données et confidentialité</a></p>    
-	       </div>
-	       <div id="a_propos">
-	           <h1>Nos hébergements</h1>
+	    	</div>
+	       <div class="a_propos">
+	           <h3>Nos hébergements</h3>
 	           <p><a href="#">Charte qualité</a></p>
 	           <p><a href="#">Soumettre votre hôtel</a></p>  
 	       </div>
-	       <div id="a_propos">
-	           <h1>Assistance</h1>
+	       <div class="a_propos">
+	           <h3>Assistance</h3>
 	           <p><a href="#">Centre d'aide</a></p>
 	           <p><a href="#">Nous contacter</a></p>    
 	       </div>	    
 	</footer>
+	</div>
 </body>
 </html>
